[workspace]
members = [
    "medicom",
    "medicom_dict",
    "medicom_tools",
]
resolver = "2"

# Compile dependencies as optimized, without debug info, to save significant space.
[profile.dev.package."*"]
opt-level = 0
debug = false
strip = true
debug-assertions = false

[profile.release]
#debug = true   # When using dhat to profile memory usage, turn debug symbols on in release builds.

