[package]
name = "medicom_tools"
version = "0.5.0"
authors = ["Christopher Speck <cspeckrun@gmail.com>"]
description = "A collection of command-line tools for exploring DICOM, developed as examples for using the medicom crate."
repository = "https://github.com/neandrake/medicom"
license = "Apache-2.0"
readme = "readme.md"
edition = "2021"

keywords = ["dicom"]
categories = ["command-line-utilities"]

[features]
dhat = ["dep:dhat"]
image = ["dep:image", "dep:egui", "dep:eframe"]
index = ["dep:mongodb", "dep:bson"]
default = ["index", "image"]

[dependencies]
anyhow = "1.0"
bson = { version = "2.15", optional = true }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dhat = { version = "0.3", optional = true }
eframe = { version = "0.32", optional = true, default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
egui = { version = "0.32", optional = true }
image = { version = "0.25", optional = true }
medicom = { path = "../medicom", version = "0.5", features = ["compress", "dimse", "stddicom"] }
mongodb = { version = "3.2", optional = true, default-features = false, features = ["dns-resolver", "sync", "rustls-tls", "compat-3-0-0"] }
ratatui = "0.29"
walkdir = "2.5"

